Finished header, starting with Nav View

--- a/index.html
+++ b/index.html
@@ -13,10 +13,30 @@
             <div class="subtitle">Libros electrónicos</div>
         </div>
         <div class="user-info">
-            <div class="lock-image"> </div>
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="lock-image"></div>
             <div class="passwords">Contraseñas</div>
             <div class="username">John Doe</div>
             <div class="down-arrow-image"> </div>
+        </div>
+    </div>
+    <div class="packs">
+        <div class="existing-packs">
+            <div class="packs-title">PAQUETES</div>
+            <div class="grade-name">Primero básico (8)</div>
+            <div class="grade-name">Segundo básico (12)</div>
+            <div class="grade-name">Tercero básico (40)</div>
+            <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
+            <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
+            <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
+            <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
+        </div>
+        <div class="line"></div>
+        <div class="new-packs">
+            <div class="new-pack-title">Agregar paquete:</div>
+            <div class="new-pack-field">Escriba el nombre aquí...</div>
+            <div class="new-pack-symbol"></div>
         </div>
     </div>
 </body>
