Finished Navview and book section header

--- a/index.html
+++ b/index.html
@@ -21,22 +21,53 @@
             <div class="down-arrow-image"> </div>
         </div>
     </div>
-    <div class="packs">
-        <div class="existing-packs">
-            <div class="packs-title">PAQUETES</div>
-            <div class="grade-name">Primero básico (8)</div>
-            <div class="grade-name">Segundo básico (12)</div>
-            <div class="grade-name">Tercero básico (40)</div>
-            <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
-            <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
-            <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
-            <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
+    <div class="big-background">
+        <div class="packs">
+            <div class="existing-packs">
+                <div class="packs-title">PAQUETES</div>
+                <div class="grade-name selected">Primero básico (8)</div>
+                <div class="grade-name">Segundo básico (12)</div>
+                <div class="grade-name">Tercero básico (40)</div>
+                <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
+                <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
+                <div class="grade-name">Cuarto Bachillerato en Ciencias y Letras (5)</div>
+                <div class="grade-name">Quinto Bachillerato en Ciencias y Letras (5)</div>
+            </div>
+            <div class="line"></div>
+            <div class="new-packs">
+                <div class="new-pack-title">Agregar paquete:</div>
+                <div class="new-pack-input">
+                    <div class="new-pack-field">Escriba el nombre aquí...</div>
+                    <div class="new-pack-color"></div>
+                    <div class="new-pack-symbol"></div>
+                </div>
+            </div>
         </div>
-        <div class="line"></div>
-        <div class="new-packs">
-            <div class="new-pack-title">Agregar paquete:</div>
-            <div class="new-pack-field">Escriba el nombre aquí...</div>
-            <div class="new-pack-symbol"></div>
+        <div class="books">
+            <div class="book-header">
+                <div class="grade-title">Primero básico</div>
+                <div class="book-symbol delete-symbol"></div>
+                <div class="book-symbol write-symbol"></div>
+                <div class="book-buttons">
+                    <div class="new-button-text new-book-text">Agregar libro</div>
+                    <div class="new-button-text new-category-text">Agregar categoría</div>
+                    <div class="new-background green"></div>
+                    <div class="new-background teal"></div>
+                </div>
+            </div>
+            <div class="white-line"></div>
+            <div class="book-languages">
+                <div class="book-language spanish selected">Idioma español</div>
+                <div class="book-language english">Idioma inglés</div>
+                <div class="bin-symbol"></div>
+            </div>
+            <div class="white-line"></div>
+            <div class="books">
+                <div class="book"></div>
+                <div class="book"></div>
+                <div class="book"></div>
+                <div class="book"></div>
+            </div>
         </div>
     </div>
 </body>
