Fixed laptop image

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
                 <div class="book-symbol delete-symbol"></div>
                 <div class="book-symbol write-symbol"></div>
                 <div class="book-buttons">
-                    <div class="new-button-text new-book-text">Agregar libro</div>
-                    <div class="new-button-text new-category-text">Agregar categoría</div>
-                    <div class="new-background green"></div>
-                    <div class="new-background teal"></div>
+                    <div class="new-background green">Agregar libro</div>
+                    <div class="new-background teal">Agregar categoría</div>
                 </div>
             </div>
             <div class="white-line"></div>
@@ -62,11 +60,71 @@
                 <div class="bin-symbol"></div>
             </div>
             <div class="white-line"></div>
-            <div class="books">
-                <div class="book"></div>
-                <div class="book"></div>
-                <div class="book"></div>
-                <div class="book"></div>
+            <div class="books-content">
+                <div class="book first-book">
+                    <div class="book-image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+                    <div class="book-footer">
+                        <div class="book-meta">
+                            <div class="book-title">
+                                El principito
+                            </div>
+                            <div class="book-size">
+                                15mb
+                            </div>
+                        </div>
+                        <div class="book-actions">
+                            <button class="book-more"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-image" style="background-image: url(fisica.png)" ></div>
+                    <div class="book-footer">
+                        <div class="book-meta">
+                            <div class="book-title">
+                                El principito
+                            </div>
+                            <div class="book-size">
+                                15mb
+                            </div>
+                        </div>
+                        <div class="book-actions">
+                            <button class="book-more"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-image" style="background-image: url(calculo.png)" ></div>
+                    <div class="book-footer">
+                        <div class="book-meta">
+                            <div class="book-title">
+                                El principito
+                            </div>
+                            <div class="book-size">
+                                15mb
+                            </div>
+                        </div>
+                        <div class="book-actions">
+                            <button class="book-more"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="book">
+                    <div class="book-image" style="background-image: url(mate2.png)" ></div>
+                    <div class="book-footer">
+                        <div class="book-meta">
+                            <div class="book-title">
+                                El principito
+                            </div>
+                            <div class="book-size">
+                                15mb
+                            </div>
+                        </div>
+                        <div class="book-actions">
+                            <button class="book-more"></button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
